# cppalery

./: CMakeLists.txt  README.md  backgroundSetter.cpp  commandWindow.cpp  cppalery.cpp  cppalery.h  directory.cpp  directory.h  form.cpp  main.cpp  mainWindow.cpp  previewWindow.cpp  window.cpp  window.h
docs/: cppalery.1.in
include/: IDirectoryController.h  IDirectoryObserver.h  backgroundSetter.h  colors.h  commandWindow.h  config.h  directory.h  directoryController.h  directoryPager.h  directorySearcher.h  form.h  keyGlobals.h  keybindings.h  mainWindow.h  messagePrinter.h  pager.h  previewWindow.h  version.h.in  window.h
src/: backgroundSetter.cpp  commandWindow.cpp  config.cpp  directory.cpp  directoryController.cpp  directoryPager.cpp  directorySearcher.cpp  form.cpp  keybindings.cpp  main.cpp  mainWindow.cpp  pager.cpp  previewWindow.cpp  window.cpp
